feat(ui): - añadir pantalla de notificaciones con opción de marcar como leídas - implementar pantalla de búsqueda con chips de filtro y resultados - crear proveedor de tema y botón para cambiar entre modo claro/oscuro - añadir widget accesible de photocard - implementar widget de tarjeta de álbum - añadir navegación inferior personalizada - crear ruta de página personalizada para transiciones suaves - implementar widget de photocard individual - añadir animación de estado de photocard para indicar propiedad - crear constructor responsive para adaptar la UI a distintos tamaños

--- a/.gitignore
+++ b/.gitignore
@@ -311,3 +311,9 @@ Backend/DJANGO_ADMIN_README.md
 !docs/
 !*.md
 !LICENSE
+
+# Documentación privada (solo para desarrollo local)
+CONEXION_FRONTEND_BACKEND.md
+
+# Scripts de desarrollo local
+check_connection.py
